@@ -1,5 +1,6 @@
 0.10
  - Add 'readme_from' directive to Makefile.PL.
+ - Update Module::Install to 1.08 version.
 
 0.09 2013-11-3
  - Update README file.
